# SeekFree_RT1064_Library_GCC_Porting

./: LICENSE  README.md
Libraries/doc/: version.txt
Libraries/nxp_libraries/device/: system_MIMXRT1064.c
Libraries/nxp_libraries/drives/: fsl_semc.h  fsl_tempmon.c
Libraries/nxp_libraries/middleware/usb/host/class/: usb_host_cdc.c  usb_host_printer.h
Libraries/nxp_libraries/middleware/usb/templates/device/class/: usb_device_cdc_rndis.h  usb_device_msc.h
Libraries/nxp_libraries/startup/GCC-ARM/: startup_MIMXRT1064.s
Libraries/nxp_libraries/startup/IAR-ARM/: startup_MIMXRT1064.s
Libraries/nxp_libraries/startup/MDK-ARM/: startup_MIMXRT1064.s
Libraries/nxp_libraries/utilities/debug_console/: fsl_debug_console_conf.h
Libraries/seekfree_libraries/common/: SEEKFREE_PRINTF.c  SEEKFREE_PRINTF.h  common.c  common.h
Libraries/seekfree_peripheral/: SEEKFREE_MT9V03X.c  SEEKFREE_WIRELESS.c
Project/: .gitignore
Project/GCC/: CMakeLists.txt  MIMXRT1064xxxxx_seekfree.ld  build.sh  buildfull.sh  clean.sh  config.cmake  env.sh  evkmimxrt1064_sdram_init.jlinkscript  files.cmake  flags.cmake
Project/IAR/program/: RT106X.ewp  RT106X.ewt
Project/MDK/: RT106X.uvoptx  RT106X.uvprojx
Project/USER/inc/: include.h
Project/USER/src/: isr.c  main.c
